# raylib-platformer-movement

./: .gitignore  CMakeLists.txt  README.md
include/: input_manager.hpp  moving_object.hpp  object.hpp  physics_bodies.hpp  physics_object.hpp  physics_system.hpp  player.hpp  player_state_machine.hpp  player_states.hpp  raycast.hpp  solid_object.hpp  timer.hpp  utility.hpp
src/: input_manager.cpp  main.cpp  moving_object.cpp  object.cpp  physics_bodies.cpp  physics_object.cpp  physics_system.cpp  player.cpp  player_state_machine.cpp  player_states.cpp  raycast.cpp  solid_object.cpp  timer.cpp  utility.cpp
